@@ -5,6 +5,7 @@ import com.ProgWebII.biotrack.dto.response.BuscarUsuarioPorIdResponse;
 import com.ProgWebII.biotrack.dto.response.ListarTodosUsuariosResponse;
 import com.ProgWebII.biotrack.dto.response.UsuarioResponse;
 import com.ProgWebII.biotrack.dto.response.UsuarioSemMedidasResponse;
+import com.ProgWebII.biotrack.mapper.UsuarioMapper;
 import com.ProgWebII.biotrack.model.User;
 import com.ProgWebII.biotrack.model.Imc;
 import com.ProgWebII.biotrack.repository.UserRepository;
@@ -25,11 +26,13 @@ public class UsuarioController implements UsuarioControllerDocs {
     private final UserRepository userRepository;
     private final UserService userService;
     private final Imc imc;
+    private final UsuarioMapper usuarioMapper;
 
-    public UsuarioController(UserRepository userRepository, UserService userService, Imc imc) {
+    public UsuarioController(UserRepository userRepository, UserService userService, Imc imc, UsuarioMapper usuarioMapper) {
         this.userRepository = userRepository;
         this.userService = userService;
         this.imc = imc;
+        this.usuarioMapper = usuarioMapper;
     }
 
     @PostMapping()
@@ -37,20 +40,21 @@ public class UsuarioController implements UsuarioControllerDocs {
         userService.createUser(userRequest);
         return ResponseEntity.ok("Usuário criado com sucesso!");
     }
-    @GetMapping("/filtro-imc")
-    public ResponseEntity<List<User>> filtrarUsuariosPorImc(@RequestParam String faixa) {
-        List<User> todosUsuarios = userRepository.findAll();
 
-        List<User> usuariosFiltrados = todosUsuarios.stream()
+    @GetMapping("/filtro-imc")
+    public ResponseEntity<List<UsuarioResponse>> filtrarUsuariosPorImc(@RequestParam String faixa) {
+
+        List<UsuarioResponse> usuariosFiltrados = userRepository.findAll().stream()
                 .filter(user -> {
                     Double imcUsuario = imc.obterImcUsuario(user.getId());
-                    if (imcUsuario == null) {
-                        return false;
-                    }
+                    if (imcUsuario == null) return false;
+
                     String faixaUsuario = imc.classificarFaixaImc(imcUsuario);
                     return faixaUsuario != null && faixaUsuario.equalsIgnoreCase(faixa);
                 })
-                .collect(Collectors.toList());
+                .map(usuarioMapper::toResponse)
+                .sorted((a, b) -> a.id().compareTo(b.id()))
+                .toList();
 
         return ResponseEntity.ok(usuariosFiltrados);
     }
@@ -83,6 +87,22 @@ public class UsuarioController implements UsuarioControllerDocs {
     @GetMapping("/{id}/ultima-medida")
     public ResponseEntity<UsuarioResponse> trazerUsuarioComUltimaMedida(@PathVariable Long id) {
         return ResponseEntity.ok(userService.trazerUsuarioPorIdComUltimaMedida(id));
+    }
+    
+    // PUT /usuarios/{id} → atualiza completamente um usuário
+    @PutMapping("/{id}")
+    public ResponseEntity<String> atualizarUsuario(
+            @PathVariable Long id,
+            @RequestBody UserRequest userRequest) {
+        userService.atualizarUsuario(id, userRequest);
+        return ResponseEntity.ok("Usuário atualizado com sucesso!");
+    }
+    
+    // DELETE /usuarios/{id} → remove um usuário
+    @DeleteMapping("/{id}")
+    public ResponseEntity<String> removerUsuario(@PathVariable Long id) {
+        userService.removerUsuario(id);
+        return ResponseEntity.ok("Usuário removido com sucesso!");
     }
 }
 
